# rdflib-gs1

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: workflow.yml
rdflib_gs1/namespace/: _GS1.py  __init__.py
scripts/: create.py
