[tool.poetry]
name = "rdflib-gs1"
version = "0.1.1"
description = "The GS1 Web Vocabulary as an rdflib namespace."
authors = ["David Riccitelli <david@wordlift.io>"]
readme = "README.md"
packages = [{ include = "rdflib_gs1/" }]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
rdflib = "^7.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
requests = "^2.32.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create = "scripts.create:create"